--- a/arch/arm/mach-mx6/Kconfig
+++ b/arch/arm/mach-mx6/Kconfig
@@ -289,11 +289,11 @@ config IMX_PCIE
 	select PCI
 
 config USB_EHCI_ARC_H1
-	tristate "USB Host 1 support"
+	bool "USB Host 1 support"
 	depends on USB_EHCI_ARC
 
 config USB_FSL_ARC_OTG
-	tristate "FSL USB OTG support"
+	bool "FSL USB OTG support"
 
 config MX6_INTER_LDO_BYPASS
 	bool "Internal LDO in MX6Q/DL bypass"
